--- a/package.json
+++ b/package.json
@@ -2,16 +2,42 @@
   "name": "react-query-toolkit",
   "private": true,
   "version": "0.0.0",
+  "author": {
+    "name": "lifeisegg123",
+    "email": "leejj2002@naver.com"
+  },
+  "main": "dist/index.umd.js",
+  "types": "types/index.d.ts",
+  "module": "dist/index.es.js",
+  "repository": "lifeisegg123/react-query-toolkit",
+  "keywords": [
+    "react",
+    "query",
+    "react-query",
+    "toolkit",
+    "query-toolkit",
+    "react-query-toolkit"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.0",
+    "@vitejs/plugin-react": "^1.3.1",
+    "c8": "^7.11.0",
+    "jsdom": "^19.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.34.19",
+    "react-query": "^4.0.0-beta.3",
     "typescript": "^4.5.4",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vitest": "^0.9.3"
+  },
+  "peerDependencies": {
+    "react-query": "^4"
   }
 }
