--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true
+    "outDir": "./types",
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "baseUrl": "."
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
