--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "build": "tsc && vite build",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.1",
     "c8": "^7.11.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "jsdom": "^19.0.0",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^4.0.0-beta.3",
