--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,3 +22,12 @@ jobs:
         run: pnpm lint
       - name: Test
         run: pnpm test
+      - name: Coverage
+        run: pnpm cov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          directory: ./coverage/
+          fail_ci_if_error: true
+          files: ./coverage-final.json
+          verbose: true
