--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,6 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-          directory: ./coverage/
           fail_ci_if_error: true
-          files: ./coverage-final.json
+          files: ./coverage/coverage-final.json
           verbose: true
