--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,7 +4,7 @@ on:
     types: [created]
 
 jobs:
-  build:
+  build & publish:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 16.x
           cache: pnpm
+          registry-url: "https://registry.npmjs.org"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Test
@@ -25,6 +26,6 @@ jobs:
       - name: build
         run: pnpm build
       - name: Publish
-        run: npm publish
+        run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
