--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/react": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.1",
@@ -51,7 +51,7 @@
     "react-query": "^4.0.0-beta.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
-    "vitest": "^0.9.3"
+    "vitest": "^0.10.0"
   },
   "peerDependencies": {
     "react-query": "^4"
