chore: deps version updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./types",
+    "outDir": "./dist",
     "emitDeclarationOnly": true,
     "declaration": true,
     "baseUrl": "."
