--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-query-toolkit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": {
     "name": "lifeisegg123",
     "email": "leejj2002@naver.com"
   },
-  "main": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
   "types": "types/index.d.ts",
   "module": "dist/index.es.js",
   "repository": {
@@ -30,30 +30,30 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "cov": "vitest run --coverage",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@testing-library/react": "^13.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-react": "^1.3.1",
-    "c8": "^7.11.0",
-    "eslint": "^8.13.0",
+    "@testing-library/react": "^13.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-react": "^2.1.0",
+    "c8": "^7.12.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
-    "jsdom": "^19.0.0",
-    "prettier": "^2.6.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-query": "^4.0.0-beta.11",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.2",
-    "vitest": "^0.12.6"
+    "jsdom": "^20.0.0",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@tanstack/react-query": "^4.3.4",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.0",
+    "vitest": "^0.23.2"
   },
   "peerDependencies": {
-    "react-query": "^4"
+    "@tanstack/react-query": "^4"
   }
 }
