--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@tanstack/react-query": "^4.3.4",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react": "^2.1.0",
-    "c8": "^7.12.0",
+    "@vitest/coverage-c8": "^0.23.2",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^4.3.4",
     "typescript": "^4.8.3",
     "vite": "^3.1.0",
     "vitest": "^0.23.2"
